--- a/src/scss/_general.scss
+++ b/src/scss/_general.scss
@@ -5,9 +5,9 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
-  // @media (max-width: 980px) {
-  //   font-size: 16px;
-  // }
+  @media (max-width: 980px) {
+    font-size: 14px;
+  }
 }
 
 #root {
