--- a/src/scss/_sections.scss
+++ b/src/scss/_sections.scss
@@ -1,3 +1,7 @@
+.text-sm {
+  font-size: 0.8rem;
+}
+
 .indicators {
   bottom: 2rem;
   position: absolute;
@@ -7,6 +11,18 @@
     margin: 0 0.3rem !important;
     button::before {
       background-color: white !important;
+    }
+  }
+}
+
+.slider-home {
+  height: 65vh;
+}
+
+.logo {
+  svg {
+    @media (max-width: 980px) {
+      width: 140px;
     }
   }
 }
