--- a/src/scss/_general.scss
+++ b/src/scss/_general.scss
@@ -79,6 +79,9 @@ a {
 .bg-lightgreen {
   background-color: #92b072;
 }
+.bg-lightblue {
+  background-color: #46d3fa;
+}
 
 .border-tertiary {
   border-color: $color-tertiary;
@@ -116,5 +119,5 @@ svg {
 
 input::placeholder,
 textarea::placeholder {
-  color: white;
+  color: #333333;
 }
