--- a/src/scss/_sections.scss
+++ b/src/scss/_sections.scss
@@ -56,20 +56,20 @@ nav {
 
 #banner {
   height: 33vh;
-  background-image: url('./images/banner.jpg');
+  background-image: url('/images/banner.jpg');
 }
 
 #elpueblo {
-  background-image: url('./images/bg-club.jpg');
+  background-image: url('/images/bg-club.jpg');
   background-size: 100% 50vh;
 }
 
 #colegio {
-  background-image: url('./images/bg-colegio.jpg');
+  background-image: url('/images/bg-colegio.jpg');
 }
 
 #naturaleza {
-  background-image: url('./images/bg-naturaleza.png');
+  background-image: url('/images/bg-naturaleza.png');
 
   @media (max-width: 980px) {
     background-size: auto 33%;
@@ -77,5 +77,5 @@ nav {
 }
 
 #contacto {
-  background-image: url('./images/bg-contacto.jpg');
+  background-image: url('/images/bg-contacto.jpg');
 }
