--- a/src/scss/_sections.scss
+++ b/src/scss/_sections.scss
@@ -52,7 +52,7 @@ nav {
 
 #banner {
   height: 33vh;
-  background-image: url('/images/banner.jpg');
+  background-image: url('https://www.estanciasdelpilar.com/backend/images-statics/banner.jpg');
 }
 
 #colegio {
@@ -68,7 +68,7 @@ nav {
 }
 
 #contacto {
-  background-image: url('/images/bg-contacto.jpg');
+  background-image: url('https://www.estanciasdelpilar.com/backend/images-statics/bg-contacto.jpg');
 }
 select {
   -webkit-appearance: none;
